Better AOT testing

--- a/test/WebDriverBiDi.AotSmokeTest/WebDriverBiDi.AotSmokeTest.csproj
+++ b/test/WebDriverBiDi.AotSmokeTest/WebDriverBiDi.AotSmokeTest.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../../src/WebDriverBiDi/WebDriverBiDi.csproj" />
+    <ProjectReference Include="../../src/WebDriverBiDi.Client/WebDriverBiDi.Client.csproj" />
   </ItemGroup>
 
 </Project>
